--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 h1 {
     font-size: 3rem;
-    color: #334155;
+    color: #eef5ff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -20,7 +20,7 @@ h1 {
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
-    background-color: #e2e8f0;
+    background-color: #1c2533;
     min-height: 100vh;
 }
 
@@ -31,6 +31,8 @@ h1 {
 .ce-button {
     grid-area: ce;
 }
+
+
 
 .calculator-container {
     background-color: #f8fafc;
@@ -65,6 +67,12 @@ h1 {
     width: 100%;
 }
 
+.screen-container {
+    display: flex;
+    padding: 0 1rem;
+    align-items: center;
+}
+
 .screen {
     margin: 1rem;
     border: 1px solid #e2e8f0;
@@ -88,7 +96,8 @@ h1 {
     gap: 0.8rem;
 }
 
-.numbers button {
+.numbers button,
+.screen-container button {
     border-width: 0;
     background-color: #38bdf8;
     color: #f1f5f9;
@@ -102,7 +111,8 @@ h1 {
     transition: 0.2s ease-in-out;
 }
 
-.numbers button:hover {
+.numbers button:hover,
+.screen-container button:hover {
     transform: scale(1.05);
     background-color: #0284c7;
 }
